# sl-ot-tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-viewer.yml
src/sl_ot_tools/: __init__.py  cli.py
src/sl_ot_tools/config/: defaults.py  resolver.py  settings.py  write_toml.py
src/sl_ot_tools/docgen/: md2docx.py  md2docx_renderer.py
src/sl_ot_tools/documents/: __init__.py  extractor.py  indexer.py  summarizer.py
src/sl_ot_tools/email/: draft_email.ps1  draft_email.sh  draft_entry.py  entry.py  process_people.py  read_email.ps1  read_email.sh
src/sl_ot_tools/knowledge/: dedup.py  doc_dedup.py
src/sl_ot_tools/registry/: __init__.py  registry.py
src/sl_ot_tools/sync/: entry.py  sync.sh
src/sl_ot_tools/templates/commands/: draft-email.md  extract-doc-knowledge.md  extract-knowledge.md  generate-org-viewer.md  md2docx.md  project-brief.md  read-emails.md  sync-pull.md  sync-push.md  update-people.md  update-tools.md
src/sl_ot_tools/viewer/: org_chart_template.html
tests/: test_dedup.py  test_resolver.py
viewer-app/: package-lock.json  package.json  test-data.json
viewer-app/src-tauri/: Cargo.toml  tauri.conf.json
viewer-app/src-tauri/capabilities/: default.json
viewer-app/src-tauri/src/: main.rs
